--- a/TractorSpecs/Views/Shared/_Layout.cshtml
+++ b/TractorSpecs/Views/Shared/_Layout.cshtml
@@ -13,8 +13,8 @@
     @*<script src="theme/js/jquery-1.7.1.min.js"></script>*@
     @*<script src="theme/js/superfish.js"></script>
     <script src="theme/js/jquery.easing.1.3.js"></script>*@
-    <script src="theme/js/tms-0.4.1.js"></script>
-    <script src="theme/js/slider.js"></script>
+    @*<script src="theme/js/tms-0.4.1.js"></script>*@
+    @*<script src="theme/js/slider.js"></script>*@
     <!--[if lt IE 8]>
        <div style=' clear: both; text-align:center; position: relative;'>
          <a href="http://windows.microsoft.com/en-US/internet-explorer/products/ie/home?ocid=ie6_countdown_bannercode">
@@ -61,7 +61,7 @@
             </div>
             <div class="slider-container">
                 <div class="mp-slider">
-                    <ul class="items">
+                    <ul rn-carousel rn-carousel-auto-slide="3" class="image items">
                         <li><img src="theme/images/slide-1.jpg" alt="" /><div class="banner mp-ban-1"><span class="row-1">putting our</span><span class="row-2">heart &amp; soul</span><span class="row-3">into the field</span></div></li>
                         <li><img src="theme/images/slide-2.jpg" alt="" /><div class="banner mp-ban-2"><span class="row-1">we have a strong</span><span class="row-2">agriculture</span><span class="row-3">heritage</span></div></li>
                         <li><img src="theme/images/slide-3.jpg" alt="" /><div class="banner mp-ban-3"><span class="row-1">growing clean</span><span class="row-2">and full of health</span><span class="row-3">products</span></div></li>
