- Added equipment classes.  - Removed unused angular views and controllers.

--- a/TractorSpecs/Views/Shared/_Layout.cshtml
+++ b/TractorSpecs/Views/Shared/_Layout.cshtml
@@ -190,7 +190,7 @@
                                                         <a href="#/makes">Brands</a>
                                                     </li>
                                                     <li class="sub-menu sub-menu-1">
-                                                        <a href="index-3.html">Equipment Types</a>
+                                                        <a href="" data-ng-click="vm.equipmentTypesClick()">Equipment Types</a>
                                                         <ul>
                                                             <li><a href="index-2.html">lorem ipsum dolor</a></li>
                                                             <li><a href="index-2.html">nunc suscipit</a></li>
