--- a/TractorSpecs/Views/Shared/_Layout.cshtml
+++ b/TractorSpecs/Views/Shared/_Layout.cshtml
@@ -185,18 +185,18 @@
                                             <div class="nav-collapse nav-collapse_ collapse">
                                                 <ul class="nav sf-menu clearfix">
                                                     <li><a href="#/home">home page</a></li>
-                                                    <li><a href="index-1.html">who we are</a></li>
+                                                    <li><a href="#/about">who we are</a></li>
                                                     <li>
                                                         <a href="#/makes">Brands</a>
                                                     </li>
                                                     <li class="sub-menu sub-menu-1">
                                                         <a href="" data-ng-click="vm.equipmentTypesClick()">Equipment Types</a>
-                                                        <ul>
+                                                        @*<ul>
                                                             <li><a href="index-2.html">lorem ipsum dolor</a></li>
                                                             <li><a href="index-2.html">nunc suscipit</a></li>
                                                                     <li><a href="404.html">404 page not found</a></li>
                                                             <li><a href="404.html"></a></li>
-                                                        </ul>
+                                                        </ul>*@
                                                     </li>
                                                     <li><a href="http://www.nettractortalk.com/">Forums</a></li>
                                                     <li><a href="index-5.html">contacts us</a></li>
@@ -228,7 +228,7 @@
                             <div class="menu_bot">
                                 <ul id="menu_bot" class="clearfix">
                                     <li><a href="index.html">home page</a></li>
-                                    <li><a href="index-1.html">who we are</a></li>
+                                    <li><a href="#/about">who we are</a></li>
                                     <li><a href="index-2.html">our services</a></li>
                                     <li><a href="index-3.html">products</a></li>
                                     <li><a href="index-4.html">partners & clients</a></li>
