--- a/TractorSpecs/Views/Shared/_Layout.cshtml
+++ b/TractorSpecs/Views/Shared/_Layout.cshtml
@@ -149,6 +149,8 @@
       <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
       <link rel="stylesheet" href="theme/EcoAgriculture/css/ie.css" type="text/css" media="screen">
     <![endif]-->
+
+    <base href="/">
 </head>
 
 <body class="main" data-ng-app="app" ng-strict-di data-ng-controller="LayoutController as vm">
@@ -184,10 +186,10 @@
                                             </a>
                                             <div class="nav-collapse nav-collapse_ collapse">
                                                 <ul class="nav sf-menu clearfix">
-                                                    <li><a href="#/home">home page</a></li>
-                                                    <li><a href="#/about">who we are</a></li>
+                                                    <li><a href="/home">home page</a></li>
+                                                    <li><a href="/about">who we are</a></li>
                                                     <li>
-                                                        <a href="#/makes">Brands</a>
+                                                        <a href="/makes">Brands</a>
                                                     </li>
                                                     <li class="sub-menu sub-menu-1">
                                                         <a href="" data-ng-click="vm.equipmentTypesClick()">Equipment Types</a>
@@ -228,7 +230,7 @@
                             <div class="menu_bot">
                                 <ul id="menu_bot" class="clearfix">
                                     <li><a href="index.html">home page</a></li>
-                                    <li><a href="#/about">who we are</a></li>
+                                    <li><a href="/about">who we are</a></li>
                                     <li><a href="index-2.html">our services</a></li>
                                     <li><a href="index-3.html">products</a></li>
                                     <li><a href="index-4.html">partners & clients</a></li>
