- Added the email contact us feature.  - Edited home page so that equipement class urls work.

--- a/TractorSpecs/Views/Shared/_Layout.cshtml
+++ b/TractorSpecs/Views/Shared/_Layout.cshtml
@@ -200,8 +200,8 @@
                                                             <li><a href="404.html"></a></li>
                                                         </ul>*@
                                                     </li>
-                                                    <li><a href="http://www.nettractortalk.com/">Forums</a></li>
-                                                    <li><a href="index-5.html">contacts us</a></li>
+                                                    <li><a target="_blank" href="http://www.nettractortalk.com/">Forums</a></li>
+                                                    <li><a href="/contact-us">contacts us</a></li>
                                                     <!--@Html.Partial("_LoginPartial", new { @class = "button button_green" })-->
                                                 </ul>
                                             </div>
@@ -229,12 +229,16 @@
                         <div class="bot1_inner clearfix">
                             <div class="menu_bot">
                                 <ul id="menu_bot" class="clearfix">
-                                    <li><a href="index.html">home page</a></li>
+                                    <li><a href="/home">home page</a></li>
                                     <li><a href="/about">who we are</a></li>
-                                    <li><a href="index-2.html">our services</a></li>
-                                    <li><a href="index-3.html">products</a></li>
-                                    <li><a href="index-4.html">partners & clients</a></li>
-                                    <li><a href="index-5.html">contacts us</a></li>
+                                    <li>
+                                        <a href="/makes">Brands</a>
+                                    </li>
+                                    <li>
+                                        <a href="" data-ng-click="vm.equipmentTypesClick()">Equipment Types</a>
+                                    </li>
+                                    <li><a target="_blank" href="http://www.nettractortalk.com/">Forums</a></li>
+                                    <li><a href="/contact-us">contacts us</a></li>
                                 </ul>
                             </div>
                             <div class="search-form-wrapper">
