--- a/TractorSpecs/Views/Shared/_Layout.cshtml
+++ b/TractorSpecs/Views/Shared/_Layout.cshtml
@@ -4,17 +4,17 @@
     <title ng-bind="'TractorSpecs &mdash; ' + title">TractorSpecs</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Your description">
-    <meta name="keywords" content="Your keywords">
-    <meta name="author" content="Your name">
-    <link rel="icon" href="theme/EcoAgriculture/images/favicon.ico" type="image/x-icon">
-    <link rel="shortcut icon" href="theme/EcoAgriculture/images/favicon.ico" type="image/x-icon" />
+    <meta name="description" content="Specifications and information for tractors and all types of agricultural and industrial equipment.">
+    <meta name="keywords" content="tractor specs data info price used value engine trade">
+    <meta name="author" content="Neil Messick, Theo Xavier">
+    <link rel="icon" href="/theme/EcoAgriculture/images/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="/theme/EcoAgriculture/images/favicon.ico" type="image/x-icon" />
 
-    <link rel="stylesheet" href="theme/EcoAgriculture/css/bootstrap.css" type="text/css" media="screen">
-    <link rel="stylesheet" href="theme/EcoAgriculture/css/bootstrap-responsive.css" type="text/css" media="screen">
-    <link rel="stylesheet" href="theme/EcoAgriculture/css/style.css" type="text/css" media="screen">
+    <link rel="stylesheet" href="/theme/EcoAgriculture/css/bootstrap.css" type="text/css" media="screen">
+    <link rel="stylesheet" href="/theme/EcoAgriculture/css/bootstrap-responsive.css" type="text/css" media="screen">
+    <link rel="stylesheet" href="/theme/EcoAgriculture/css/style.css" type="text/css" media="screen">
 
-    <script type="text/javascript" src="theme/EcoAgriculture/js/jquery.js"></script>
+    @*<script type="text/javascript" src="theme/EcoAgriculture/js/jquery.js"></script>
     <script type="text/javascript" src="theme/EcoAgriculture/js/jquery.easing.1.3.js"></script>
     <script type="text/javascript" src="theme/EcoAgriculture/js/superfish.js"></script>
 
@@ -25,123 +25,11 @@
     <script type="text/javascript" src="theme/EcoAgriculture/js/jquery.caroufredsel.js"></script>
     <script type="text/javascript" src="theme/EcoAgriculture/js/jquery.touchSwipe.min.js"></script>
 
-    <script type="text/javascript" src="theme/EcoAgriculture/js/script.js"></script>
+    <script type="text/javascript" src="theme/EcoAgriculture/js/script.js"></script>*@
+    @Styles.Render("~/Content/theme")
+    @Scripts.Render("~/bundles/theme")
     @Styles.Render("~/Content/css")
-    @*@Scripts.Render("~/bundles/jquery")*@
-    @*@Scripts.Render("~/bundles/theme")*@
-    @*<script>
-            $(document).ready(function () {
-                //carufredsel main slider
-                $('#caroufredsel_slider1').carouFredSel({
-                    auto: {
-                        timeoutDuration: 9000
-                    },
-                    responsive: true,
-                    direction: "left",
-                    prev: '.prev1',
-                    next: '.next1',
-                    width: '100%',
-                    scroll: {
-                        items: 1,
-                        duration: 1000,
-                        easing: "easeOutExpo",
-                        fx: "fade"
-                    },
-                    items: {
-                        width: '1000',
-                        height: 'variable',	//	optionally resize item-height
-                        visible: {
-                            min: 1,
-                            max: 1
-                        }
-                    },
-                    mousewheel: false,
-                    swipe: {
-                        onMouse: true,
-                        onTouch: true
-                    },
-                    pagination: ".pagination1"
-                });
-
-                //	carouFredSel small
-                $('#slider3 .carousel.main ul').carouFredSel({
-                    auto: {
-                        timeoutDuration: 8000
-                    },
-                    responsive: true,
-                    prev: '.prev3',
-                    next: '.next3',
-                    width: '100%',
-                    scroll: {
-                        items: 1,
-                        duration: 1000,
-                        easing: "easeOutExpo"
-                    },
-                    items: {
-                        width: '350',
-                        height: 'variable',	//	optionally resize item-height
-                        visible: {
-                            min: 1,
-                            max: 2
-                        }
-                    },
-                    mousewheel: false,
-                    swipe: {
-                        onMouse: true,
-                        onTouch: true
-                    }
-                });
-
-                $(window).bind("resize", updateSizes_vat).bind("load", updateSizes_vat);
-                function updateSizes_vat() {
-                    $('#caroufredsel_slider1').trigger("updateSizes");
-                    $('#slider3 .carousel.main ul').trigger("updateSizes");
-                }
-
-                updateSizes_vat();
-
-                // carufredsel testimonials
-                $('#caroufredsel').carouFredSel({
-                    auto: {
-                        timeoutDuration: 9000
-                    },
-                    responsive: true,
-                    direction: "left",
-                    prev: '.prev_testimonial',
-                    next: '.next_testimonial',
-                    width: '100%',
-                    scroll: {
-                        items: 1,
-                        duration: 1000,
-                        easing: "easeOutExpo",
-                        fx: "fade"
-                    },
-                    items: {
-                        width: '1000',
-                        height: 'variable',	//	optionally resize item-height
-                        visible: {
-                            min: 1,
-                            max: 1
-                        }
-                    },
-                    mousewheel: false,
-                    swipe: {
-                        onMouse: true,
-                        onTouch: true
-                    }
-
-
-
-                });
-
-
-
-            }); //
-            $(window).load(function () {
-                //
-
-            }); //
-        </script>*@
+  
     <!--[if lt IE 8]>
             <div style='text-align:center'><a href="http://www.microsoft.com/windows/internet-explorer/default.aspx?ocid=ie6_countdown_bannercode"><img src="http://www.theie6countdown.com/images/upgrade.jpg"border="0"alt=""/></a></div>
         <![endif]-->
@@ -164,7 +52,7 @@
                     <div class="row">
                         <div class="span12">
                             <div class="top1_inner clearfix">
-                                <header><div class="logo_wrapper"><a href="/home" class="logo2" title="Tractor Specs Logo"><img src="Images/image005.png" alt="Tractor Specs Logo"></a></div></header>
+                                <header><div class="logo_wrapper"><a href="/" class="logo2" title="Tractor Specs Logo"><img src="Images/image005.png" alt="Tractor Specs Logo"></a></div></header>
                             </div>
                         </div>
                     </div>
@@ -186,7 +74,7 @@
                                             </a>
                                             <div class="nav-collapse nav-collapse_ collapse">
                                                 <ul class="nav sf-menu clearfix">
-                                                    <li><a href="/home" title="Home">home page</a></li>
+                                                    <li><a href="/" title="Home">home page</a></li>
                                                     <li><a href="/about" title="About">who we are</a></li>
                                                     <li>
                                                         <a href="/allmakes" title="Brand Listing">Brands</a>
@@ -204,13 +92,11 @@
                                                     <li><a href="/contact-us" title="Contact Us">contacts us</a></li>
                                                     <li class="search-top">
                                                         <div class="search-form-wrapper">
-                                                            @*<form ng-submit="vm.searchSubmit(vm.searchTerm)" class="navbar-form">*@
                                                             <div class="navbar-form">
                                                                 <input type="text" name="s" value='Search' onBlur="if(this.value=='') this.value='Search'" onFocus="if(this.value =='Search' ) this.value=''"
                                                                        data-ng-model="vm.searchTerm" ng-keyup="$event.keyCode == 13 && vm.searchSubmit(vm.searchTerm)">
                                                                 <a href="/search/{{ vm.searchTerm }}" title="Search"></a>
                                                             </div>
-                                                            @*</form>*@
                                                         </div>
                                                     </li>
                                                 </ul>
@@ -239,7 +125,7 @@
                         <div class="bot1_inner clearfix">
                             <div class="menu_bot">
                                 <ul id="menu_bot" class="clearfix">
-                                    <li><a href="/home" title="Home">home</a></li>
+                                    <li><a href="/" title="Home">home</a></li>
                                     <li><a href="/about" title="About">about</a></li>
                                     <li>
                                         <a href="/allmakes" title="Brand Listing">all makes</a>
@@ -252,11 +138,11 @@
                                 </ul>
                             </div>
                             <div class="search-form-wrapper">
-                                <form ng-submit="vm.searchSubmit(vm.searchTerm)" class="navbar-form">
+                                <div class="navbar-form">
                                     <input type="text" name="s" value='Search' onBlur="if(this.value=='') this.value='Search'" onFocus="if(this.value =='Search' ) this.value=''"
-                                           data-ng-model="vm.searchTerm">
+                                           data-ng-model="vm.searchTerm" ng-keyup="$event.keyCode == 13 && vm.searchSubmit(vm.searchTerm)">
                                     <a href="/search/{{ vm.searchTerm }}" title="Search"></a>
-                                </form>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -290,8 +176,7 @@
             </div>
         </div>
     </div>
-    <script type="text/javascript" src="theme/EcoAgriculture/js/bootstrap.js"></script>
-    @*@Scripts.Render("~/bundles/bootstrap")*@
+    @*<script type="text/javascript" src="theme/EcoAgriculture/js/bootstrap.js"></script>*@
     @Scripts.Render("~/bundles/angular")
     @Scripts.Render("~/bundles/angular-third-party")
     @Scripts.Render("~/bundles/angular-app")
