- Add information to the make equipment class.

--- a/TractorSpecs/Views/Shared/_Layout.cshtml
+++ b/TractorSpecs/Views/Shared/_Layout.cshtml
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Specifications and information for tractors and all types of agricultural and industrial equipment.">
     <meta name="keywords" content="tractor specs data info price used value engine trade">
-    <meta name="author" content="Neil Messick, Theo Xavier">
+    <meta name="author" content="Neil Messick, XavierSoftware.com">
     <link rel="icon" href="/theme/EcoAgriculture/images/favicon.ico" type="image/x-icon">
     <link rel="shortcut icon" href="/theme/EcoAgriculture/images/favicon.ico" type="image/x-icon" />
 
