--- a/TractorSpecs/Views/Shared/_Layout.cshtml
+++ b/TractorSpecs/Views/Shared/_Layout.cshtml
@@ -26,7 +26,7 @@
     <script type="text/javascript" src="theme/EcoAgriculture/js/jquery.touchSwipe.min.js"></script>
 
     <script type="text/javascript" src="theme/EcoAgriculture/js/script.js"></script>*@
-    @Styles.Render("~/Content/theme")
+    @*@Styles.Render("~/Content/theme")*@
     @Scripts.Render("~/bundles/theme")
     @Styles.Render("~/Content/css")
   
