- Added breadcrums to make and model.  - Implemented review saving.  - Put equip types in the middle of the page.

--- a/TractorSpecs/Content/Site.css
+++ b/TractorSpecs/Content/Site.css
@@ -48,3 +48,9 @@
   border-left-color: #dd223c;
 }
 /*End Section Angular Loading Bar*/
+
+/*Begin section rating radio boxes*/
+.no-block-label {
+    display: inline-block;
+}
+/*End section rating radio boxes*/
