- Fixed bug that was preventing the link and modelPricing from being updated.

--- a/TractorSpecs/Views/Shared/_Layout.cshtml
+++ b/TractorSpecs/Views/Shared/_Layout.cshtml
@@ -110,6 +110,7 @@
                 </div>
             </div>
 
+            <toaster-container toaster-options="{'position-class': 'toast-top-full-width', 'preventduplicates': true}"></toaster-container>
             <div>
                 @RenderBody()
                 @RenderSection("SPAViews", required: false)
